# schema-first

./: .gitignore  LICENSE.txt  README.md  conf.py  hatch_build.py  pyproject.toml  test_schema_first.py
src/: docs.rst
src/my_schema_project/: __init__.py
src/schema/: my_schema_model.json
